tests/neg-custom-args/escape-analysis/Escapee.neg.eff.scala
object Escapee {
  import scala.annotation.internal.local

  def escapade(
    @local notLocal: Any // error
  ): Any =
    notLocal

  def greatEscape(
    @local notLocal: Any // error
  ): Any = {
    {
      notLocal
    }
  }
}
